--- a/app/src/main/res/layout/encounter_view.xml
+++ b/app/src/main/res/layout/encounter_view.xml
@@ -22,11 +22,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/characters"
+            android:id="@+id/encounters"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/ability_list_item"
@@ -34,16 +35,48 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_character"
+            android:id="@+id/add_encounter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/dice_output"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/fab_margin"
-            android:backgroundTint="@color/colour_primary"
             android:layout_marginBottom="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            app:srcCompat="@android:drawable/ic_dialog_email" />
+
+        <FrameLayout
+            android:id="@+id/dice_output"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/bg_single_line_border"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="bottom"
+        android:backgroundTint="@color/white">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/reset_combat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:text="reset"
+                style="?android:attr/buttonBarButtonStyle" />
+
+        </LinearLayout>
+
+    </com.google.android.material.bottomappbar.BottomAppBar>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
