--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,25 +1,229 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.DnDCombatManager" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
 
-    <style name="Theme.DnDCombatManager.NoActionBar">
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.Bridge">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/auditBlue</item>
+        <item name="colorPrimaryDark">@color/auditBlue</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="titleTextColor">@color/white</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:buttonStyle">@style/RobotoButtonStyle</item>
+        <item name="actionOverflowMenuStyle">@style/OverflowMenu</item>
+        <item name="dialogTheme">@style/CustomDialog</item>
+        <item name="android:windowAnimationStyle">@style/SlideInAnimation</item>
+        <item name="chipStyle">@style/ThinnerChip</item>
     </style>
 
-    <style name="Theme.DnDCombatManager.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="OverflowMenu" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <!-- Required for Lollipop. -->
+        <item name="android:overlapAnchor">false</item>
+        <item name="android:dropDownVerticalOffset">4.0dip</item>
+    </style>
 
-    <style name="Theme.DnDCombatManager.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="TextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="minHeight">@dimen/text_field_height</item>
+        <item name="errorEnabled">true</item>
+        <item name="errorIconTint">@color/error</item>
+        <item name="boxStrokeErrorColor">@color/error</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="boxBackgroundMode">outline</item>
+        <item name="boxStrokeColor">@color/auditBlue</item>
+        <item name="hintAnimationEnabled">false</item>
+        <item name="hintEnabled">false</item>
+    </style>
+
+    <style name="ImitationTextFieldStyle">
+        <item name="android:background">@drawable/bg_rounded_corner_light_grey_thin</item>
+    </style>
+
+    <style name="DropdownStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="minHeight">48dp</item>
+        <item name="errorEnabled">true</item>
+        <item name="errorIconTint">@color/error</item>
+        <item name="boxStrokeErrorColor">@color/error</item>
+        <item name="errorIconDrawable">@drawable/ic_error_red</item>
+        <item name="boxBackgroundMode">outline</item>
+        <item name="boxStrokeColor">@color/auditBlue</item>
+        <item name="hintAnimationEnabled">false</item>
+        <item name="hintEnabled">false</item>
+    </style>
+
+    <style name="TextViewStyleLarge" parent="TextViewStyle">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextViewStyleTitle" parent="TextViewStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/jet</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="CustomDialog" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:windowNoTitle">false</item>
+    </style>
+
+    <style name="TextViewStyleTitleLarge" parent="TextViewStyle">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/jet</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="TextViewStyleTitleLight" parent="TextViewStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_dark</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="EditTextStyle" parent="TextViewStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_dark</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:gravity">top|start</item>
+        <item name="android:minLines">2</item>
+        <item name="android:background">@color/background_light</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:minHeight">48dp</item>
+    </style>
+
+    <style name="EditTextStyleBubble">
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:background">@drawable/bg_rounded_corner_grey_filled_bordered</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:minHeight">48dp</item>
+    </style>
+
+    <style name="TextViewStyleSubtitle" parent="TextViewStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextViewStyleTag" parent="TextViewStyle">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingStart">@dimen/status_indicator_padding_horizontal</item>
+        <item name="android:paddingTop">@dimen/status_indicator_padding_vertical</item>
+        <item name="android:paddingEnd">@dimen/status_indicator_padding_horizontal</item>
+        <item name="android:paddingBottom">@dimen/status_indicator_padding_vertical</item>
+    </style>
+
+    <style name="RequirementIdentifierStyle" parent="TextViewStyle">
+        <item name="android:text">9.99</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textColor">@color/auditBlue</item>
+        <item name="cornerRadius">@dimen/rounded_corner_radius</item>
+    </style>
+
+    <style name="DialogButtonStyle" parent="">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+    </style>
+
+    <style name="ButtonStyleBorderless" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="ButtonStyleBordered" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+        <item name="iconGravity">textStart</item>
+        <item name="fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="ButtonStyleFilled" parent="Widget.MaterialComponents.Button.Icon">
+        <item name="fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/bg_launch_screen</item>
+        <item name="colorPrimary">@color/auditBlue</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="titleTextColor">@color/white</item>
+    </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!-- Header Styles -->
+    <style name="HeaderBar">
+        <item name="android:background">@color/auditBlue</item>
+        <item name="titleTextColor">@color/white</item>
+    </style>
+
+    <style name="TimestampStyle" parent="MaterialTheme.Light">
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+    </style>
+
+    <!-- Drawer Styles -->
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/white</item>
+    </style>
+
+    <declare-styleable name="ModalSearch">
+        <attr name="hintText" format="string" />
+    </declare-styleable>
+
+    <!-- Signature Dialog -->
+
+    <!-- Translucent Activity -->
+    <style name="AppTheme.Translucent" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/transparent_bg</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="SlideInAnimation" parent="@android:style/Animation.Activity">
+        <item name="android:windowEnterAnimation">@anim/slide_from_right</item>
+        <item name="android:windowExitAnimation">@anim/slide_to_right</item>
+    </style>
+
+    <!-- Animation for dialog box -->
+
+    <style name="ThinnerChip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipCornerRadius">12dp</item>
+        <item name="chipMinHeight">24dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
